# captif-data-structures

./: .gitignore  README.md  coverage.sh  pyproject.toml
.github/workflows/: python-publish.yml
tests/: test_captif_data_schema.py  test_version.py
tests/test_readers/: test_base_reader.py  test_deflection_beam_reader.py  test_lap_count_reader.py  test_texture_reader.py
tests/test_structure/: test_demo_structure.py
