[tool.poetry]
name = "captif-data-schema"
version = "0.1"
description = ""
authors = ["John Bull <john.bull@nzta.govt.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
parse = "^1.19.0"
tableschema = "^1.20.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-randomly = "^3.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
